<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="app_name" translatable="false">CipherNode</string>
	<string name="app_package" translatable="false">org.briarproject.briar.android</string>
	<string name="setup_title">Welcome to CipherNode</string>
	<string name="setup_name_explanation">Your nickname will be shown next to any content you post. You can\'t change it after creating your account.</string>
	<string name="setup_next">Next</string>
	<string name="setup_password_intro">Choose a Password</string>
	<string name="setup_password_explanation">Your CipherNode account is stored encrypted on your device, not in the cloud. If you forget your password or uninstall CipherNode, there\'s no way to recover your account.\n\nChoose a long password that\'s hard to guess, such as four random words, or ten random letters, numbers and symbols.</string>
	<string name="dnkm_doze_intro">To receive messages, CipherNode needs to stay connected in the background.</string>
	<string name="dnkm_doze_explanation">To receive messages, CipherNode needs to stay connected in the background. Please disable battery optimizations so CipherNode can stay connected.</string>
	<string name="choose_nickname">Choose your nickname</string>
	<string name="choose_password">Choose your password</string>
	<string name="confirm_password">Confirm your password</string>
	<string name="name_too_long">Name is too long</string>
	<string name="password_too_weak">Password is too weak</string>
	<string name="password_quite_strong">Password is okay</string>
	<string name="password_strong">Password is strong</string>
	<string name="passwords_do_not_match">Passwords do not match</string>
	<string name="create_account_button">Create Account</string>
	<string name="more_info">More Information</string>
	<string name="don_t_ask_again">Don\'t ask again</string>
	<string name="dnkm_huawei_protected_text">Please tap the button below and make sure CipherNode is protected in the \"Protected Apps\" screen.</string>
	<string name="dnkm_huawei_protected_button">Protect CipherNode</string>
	<string name="dnkm_huawei_protected_help">If CipherNode is not added to the protected apps list, it will be unable to run in the background.</string>
	<string name="dnkm_huawei_app_launch_text">Please tap the button below, open the \"App launch\" screen and make sure CipherNode is set to \"Manage manually\".</string>
	<string name="dnkm_huawei_app_launch_help">If CipherNode is not set to \"Manage manually\" in the \"App launch\" screen, it will not be able to run in the background.</string>
	<string name="dnkm_xiaomi_text">To run in the background, CipherNode needs to be locked to the recent apps list.</string>
	<string name="dnkm_xiaomi_button">Protect CipherNode</string>
	<string name="dnkm_xiaomi_help">If CipherNode is not locked to the recent apps list, it will be unable to run in the background.</string>
	<string name="dnkm_xiaomi_dialog_body_old">1. Open the recent apps list (also called the app switcher)\n\n2. Swipe down on the image of CipherNode to show the padlock icon\n\n3. If the padlock is not locked, tap to lock it</string>
	<string name="dnkm_xiaomi_dialog_body_new">1. Open the recent apps list (also called the app switcher)\n\n2. If CipherNode has a small image of a padlock next to its name then you don\'t need to do anything\n\n3. If there\'s no padlock, press and hold the image of CipherNode until the padlock button appears, then tap it</string>
	<string name="dnkm_xiaomi_lock_apps_text">Please tap the button below to open the security settings. Tap \"Boost speed\", then tap \"Lock apps\", and make sure CipherNode is set to \"Locked\".</string>
	<string name="dnkm_xiaomi_lock_apps_help">If CipherNode is not set to \"Locked\" in the \"Lock apps\" screen, it will be unable to run in the background.</string>
	<string name="dnkm_warning_dozed_1">CipherNode was unable to run in the background</string>
	<string name="enter_password">Password</string>
	<string name="try_again">Wrong password, try again</string>
	<string name="dialog_title_cannot_check_password">Cannot Check Password</string>
	<string name="dialog_message_cannot_check_password">CipherNode cannot check your password. Please try rebooting your device to solve this problem.</string>
	<string name="sign_in_title">Sign into CipherNode</string>
	<string name="sign_in_button">Sign In</string>
	<string name="forgotten_password">Forgot your password?</string>
	<string name="dialog_title_lost_password">Lost Password</string>
	<string name="dialog_message_lost_password">Your CipherNode account is stored encrypted on your device, not in the cloud, so we can\'t reset your password. Would you like to delete your account and start again?\n\nCaution: Your identities, contacts and messages will be permanently lost.</string>
	<string name="startup_failed_activity_title">CipherNode Startup Failure</string>
	<string name="startup_failed_clock_error">CipherNode was unable to start because your device\'s clock is wrong.\n\nPlease set your device\'s clock to the right time and try again.</string>
	<string name="startup_failed_db_error">CipherNode was unable to open the database containing your account, your contacts and your messages.\n\nPlease upgrade to the latest version of the app and try again, or set up a new account by choosing \'I have forgotten my password\' at the password prompt.</string>
	<string name="startup_failed_data_too_old_error">Your account was created with an old version of this app and cannot be opened with this version.\n\nYou must either reinstall the old version or set up a new account by choosing \'I have forgotten my password\' at the password prompt.</string>
	<string name="startup_failed_data_too_new_error">Your account was created with a newer version of this app and cannot be opened with this version.\n\nPlease upgrade to the latest version and try again.</string>
	<string name="startup_failed_service_error">CipherNode was unable to start a required component.\n\nPlease upgrade to the latest version of the app and try again.</string>
	<plurals name="expiry_warning">
		<item quantity="one">This is a test version of CipherNode. Your account will expire in %d day and cannot be renewed.</item>
		<item quantity="other">This is a test version of CipherNode. Your account will expire in %d days and cannot be renewed.</item>
	</plurals>
	<string name="expiry_date_reached">This software has expired.\nThank you for testing!</string>
	<string name="download_briar">To continue using CipherNode, please download the latest release.</string>
	<string name="create_new_account">You will need to create a new account, but you can use the same nickname.</string>
	<string name="download_briar_button">Download Latest Release</string>
	<string name="old_android_expiry_date_reached">CipherNode no longer runs on Android 4.\nPlease install CipherNode on a newer device.</string>
	<string name="old_android_delete_account">You can tap the button below to delete your account from this device.</string>
	<string name="delete_account_button">Delete Account</string>
	<string name="startup_open_database">Decrypting Database…</string>
	<string name="startup_migrate_database">Upgrading Database…</string>
	<string name="startup_compact_database">Compacting Database…</string>
	<string name="nav_drawer_open_description">Open the navigation drawer</string>
	<string name="nav_drawer_close_description">Close the navigation drawer</string>
	<string name="contact_list_button">Contacts</string>
	<string name="groups_button">Private Groups</string>
	<string name="forums_button">Forums</string>
	<string name="blogs_button">Blogs</string>
	<string name="lock_button">Lock App</string>
	<string name="settings_button">Settings</string>
	<string name="sign_out_button">Sign Out</string>
	<string name="transports_onboarding_text">Tap here to control how CipherNode connects to your contacts.</string>
	<string name="transport_tor">Internet</string>
	<string name="tor_device_status_online_wifi">Your phone has Internet access via Wi-Fi</string>
	<string name="tor_device_status_online_mobile">Your phone has Internet access via mobile data</string>
	<string name="tor_device_status_offline">Your phone does not have Internet access</string>
	<string name="tor_plugin_status_enabling">CipherNode is connecting to the Internet</string>
	<string name="tor_plugin_status_active">CipherNode is connected to the Internet</string>
	<string name="tor_plugin_status_inactive">CipherNode can\'t connect to the Internet</string>
	<string name="tor_plugin_status_disabled">CipherNode is configured not to use the Internet</string>
	<string name="tor_plugin_status_disabled_mobile_data">CipherNode is configured not to use mobile data</string>
	<string name="tor_plugin_status_disabled_battery">CipherNode is configured not to use the Internet when running on battery</string>
	<string name="tor_plugin_status_disabled_country_blocked">CipherNode is configured not to use the Internet in this country</string>
	<string name="transport_lan">Wi-Fi</string>
	<string name="transport_lan_long">Same Wi-Fi network</string>
	<string name="lan_device_status_on">Your phone is connected to Wi-Fi</string>
	<string name="lan_device_status_off">Your phone is not connected to Wi-Fi</string>
	<string name="lan_plugin_status_enabling">CipherNode is connecting to the Wi-Fi network</string>
	<string name="lan_plugin_status_active">CipherNode is connected to the Wi-Fi network</string>
	<string name="lan_plugin_status_inactive">CipherNode can\'t connect to the Wi-Fi network</string>
	<string name="lan_plugin_status_disabled">CipherNode is configured not to use the Wi-Fi network</string>
	<string name="transport_bt">Bluetooth</string>
	<string name="bt_device_status_on">Your phone\'s Bluetooth is turned on</string>
	<string name="bt_device_status_off">Your phone\'s Bluetooth is turned off</string>
	<string name="bt_plugin_status_enabling">CipherNode is connecting to Bluetooth</string>
	<string name="bt_plugin_status_active">CipherNode is connected to Bluetooth</string>
	<string name="bt_plugin_status_inactive">CipherNode can\'t connect to Bluetooth</string>
	<string name="bt_plugin_status_disabled">CipherNode is configured not to use Bluetooth</string>
	<string name="reminder_notification_title">Signed out of CipherNode</string>
	<string name="reminder_notification_text">Tap to sign back in.</string>
	<string name="reminder_notification_channel_title">CipherNode Sign-in Reminder</string>
	<string name="reminder_notification_dismiss">Dismiss</string>
	<string name="ongoing_notification_title">Signed into CipherNode</string>
	<string name="ongoing_notification_text">Touch to open CipherNode.</string>
	<plurals name="private_message_notification_text">
		<item quantity="one">New private message.</item>
		<item quantity="other">%d new private messages.</item>
	</plurals>
	<plurals name="group_message_notification_text">
		<item quantity="one">New group message.</item>
		<item quantity="other">%d new group messages.</item>
	</plurals>
	<plurals name="forum_post_notification_text">
		<item quantity="one">New forum post.</item>
		<item quantity="other">%d new forum posts.</item>
	</plurals>
	<plurals name="blog_post_notification_text">
		<item quantity="one">New blog post.</item>
		<item quantity="other">%d new blog posts.</item>
	</plurals>
	<string name="now">now</string>
	<string name="show">Show</string>
	<string name="hide">Hide</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="got_it">Got it</string>
	<string name="delete">Delete</string>
	<string name="suggest_reply">Suggest Reply</string>
	<string name="check_grammar">Check Grammar</string>
	<string name="change_style">Change Writing Style</string>
	<string name="style_professional">Professional</string>
	<string name="style_casual">Casual</string>
	<string name="style_funny">Funny</string>
</resources>